--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-wordcloud": "^1.2.7",
     "web-vitals": "^2.1.4"
   },
